ndb: bug#6435 fix null handling in ha_ndbcluster when using ordered index

mysql-test/r/ndb_index_ordered.result:
  bug#6435
mysql-test/t/ndb_index_ordered.test:
  bug#6435
sql/ha_ndbcluster.cc:
  Fix null handling in ordered index code